static/css/buyandsell/index.css
/* ... */
.manage-watched-box-category-group
{
  display: inline;
}

.manage-watched-box-main
{
  display: inline;
  font-weight: 600;
}

.manage-watched-box-sub-group
{
  display: inline;
  font-size: 13px;
}
.manage-watched-box-sub
{
  display: inline;
  margin-left: 25px;
}

.manage-watched-box-body
{
  background-color: #ffffff;
  padding-top: 15px;
}

.manage-watched-box-checkbox-text
{
  display: inline;
  margin-left: 5px;
}

.checkbox-custom-to-buyandsell
{
  width: 15px;
  height: 15px;
  content : url("../../images/buyandsell/checkbox-empty.png");
}

.checkbox-custom-to-buyandsell-checked
{
  content : url("../../images/buyandsell/checkbox-checked.png");
}

.ui-dialog-titlebar
{
  background-color: #1c2028;
  padding: 15px;
}

.ui-dialog-title
{
  color: white;
  text-align: center;
  font-size: 18px;
  font-family: opensans;
}

.ui-dialog-titlebar-close
{
  content : url("../../images/buyandsell/close-button-grey.png");
  -webkit-border-radius: 0;
  -moz-border-radius: 0;
  border-radius: 10px;
  padding: 3px;
}

.ui-state-focus
{
  -webkit-box-shadow: 0px 0px 0px transparent;
  -moz-box-shadow: 0px 0px 0px transparent;;
  box-shadow: 0px 0px 0px transparent;;
}

.manage-watched-box-submit
{
  display: inline;
  float: right;
  margin-right: 15px;
}

.manage-watched-box-submit-button
{
  background-color: #1081de;
  color: #ffffff;
  border: none;
  padding: 4px 10px;
  font-size: 13px;
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  border-radius: 2px;
}

.table-striped tbody tr
{
  cursor: pointer;
}

.table-striped tbody tr:hover
{
  background-color: white;
}

.black-overlay
{
  position: fixed;
  width: 100%;
  height: 100%;
  background-color: #000000;
  opacity: 0.5;
  z-index: 1000;
  display: none;
}

.price-range-submit-button-image
{
  width: 8px;;
}

.password-confirmation-area
{
  margin-top: 25px;
}

.sign-in-button
{
  display: inline;
  position: fixed;
  right: 15px;
  top: 15px;
  background-color: #1081DE;
  color: #ffffff;
  padding: 3px 10px;
  font-size: 13px;
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  border-radius: 2px;
  cursor: pointer;
}

.sign-in-request-text
{
  display: inline;
  font-size: 14px;
  position: fixed;
  top: 17px;
  right: 90px;
  color: #AAA;
}

.item-removal-confirmation-text
{
  font-size: 19px;
  text-align: left;
  color: #616161;
  padding: 10px 36px;
}

.remove-item-confirm-yes
{
  padding: 6px 25px;
}

.remove-item-confirm-no
{
  padding: 6px 25px;
  margin-left: 25px;
  margin-right: 155px;
}

.price-range-submit-button-image
{
  width: 8px;
  margin: 0 3px;
}

.alert-error
{
  position: fixed;
  top: 50px;
  background-color: #ffd2d2;
  color: #dd0000;
  border: 1px solid #dd0000;
  z-index: 100;
  padding: 10px 15px;
}

.your-phone-no
{
  position: relative;
  margin: 20px auto 12px -12px;
  text-align: left;
  font-weight: bold;
  padding-left: 37px;
  display: inline-block;
}

.phone-no-visibility-toggle
{
  display: inline-block;
  position: absolute;
  width: 75px;
  height: 21px;
  border: 1px solid c5c5c5;
  overflow: hidden;
  left: 155px;
  top: 20px;
  -webkit-border-radius: 20px;
  -moz-border-radius: 20px;
  border-radius: 20px;
  cursor: pointer;

}

.phone-no-visibility-toggle-options
{
  display: inline;
  position: absolute;
  top: -3px;
  font-size: 11px;
  padding: 5px 12px;
}

.phone-no-visibility-toggle-slider
{
  position: absolute;
  left: -3px;
}

.phone-no-visible
{
  left: 0px;
  padding-right: 19px;
  color: #ffffff;
  background: #1081de;
}

.phone-no-hidden
{
  left: 68px;
  background-color: #dddddd;
  padding-left: 26px;
}

.phone-no-visibility-toggle-button
{
  position: absolute;
  width: 25px;
  height: 25px;
  background-color: #ffffff;
  border: 1px solid #fbf1f1;
  -webkit-border-radius: 100%;
  -moz-border-radius: 100%;
  border-radius: 100%;
  left: 208px;
  top: 18px;
  cursor: pointer;
  box-shadow: 0px 1px 3px #DDD;
}

.phone-no-visibility-info-text
{
  padding: 0 25px;
  font-size: 12px;
  font-style: italic;
  color: #7D7D7D;
}

